--- a/docs/tutorial/interaction-pheno_prerank_enrich.ipynb
+++ b/docs/tutorial/interaction-pheno_prerank_enrich.ipynb
@@ -17,13 +17,13 @@
     "This format allows `pheno_prerank_enrich` to perform enrichment analysis using phenotype-level ranked interaction-level statistics.\n",
     "\n",
     "\n",
-    "In this tutorial, we use gene interaction data from the GSE13268 [1] dataset, which includes two phenotypes:\n",
+    "In this tutorial, we use gene interaction data from the [GSE13268][GSE13268] dataset, which includes two phenotypes:\n",
     "\n",
     "- **GK (Goto-Kakizaki):** An inbred rat model commonly used for diabetes research. GK rats exhibit a polygenic form of diabetes, closely mirroring human disease characteristics such as hyperglycemia, impaired glucose tolerance, and insulin resistance. This makes them a valuable model for studying human type 2 diabetes.\n",
     "\n",
     "- **WKY (Wistar-Kyoto):** A standard inbred laboratory rat strain often used as a control. In this study, WKY rats serve as the reference group for comparison with GK rats, enabling the investigation of insulin resistance and diabetes progression.\n",
     "\n",
-    "For each rat sample, gene–gene interactions and their corresponding entropy-based Critical Transition (CT) scores were precomputed by NIEE [2]. A differential analysis was then performed between the GK and WKY groups. From this, we identified gene interactions with higher fluctuation in GK rats, ranked by their z-scores from the differential test (`grea/data/GSE13268_GK.csv`).\n",
+    "For each rat sample, gene–gene interactions and their corresponding entropy-based Critical Transition (CT) scores were precomputed by [NIEE][NIEE]. A differential analysis was then performed between the GK and WKY groups. From this, we identified gene interactions with higher fluctuation in GK rats, ranked by their z-scores from the differential test (`grea/data/GSE13268_GK.csv`).\n",
     "\n",
     "\n",
     "\n"
